--- a/overlay/packages/apps/SnapdragonCamera/res/values/config.xml
+++ b/overlay/packages/apps/SnapdragonCamera/res/values/config.xml
@@ -22,6 +22,7 @@
 <resources>
 
     <!-- Zero shutter lag-->
+    <bool name="pref_camera_zsl_disabled">true</bool>
     <string name="pref_camera_zsl_default" translatable="false">off</string>
 
 </resources>
